# fastapi_blog_tutorial

./: .gitignore  README.md  initial_data.sql  main.py  pyproject.toml  sync_async.ipynb
blog_db_managing/: README.md  initial_data.sql
blog_db_managing/routes/: blog.py
blog_db_managing/utils/: utils.py
db/: database.py
routes/: blog.py
schemas/: blog_schema.py
services/: blog_svc.py
static/default/: .gitkeep
static/uploads/: .gitkeep
templates/: index.html  modify_blog.html  new_blog.html  show_blog.html
templates/layout/: main_layout.html  navbar.html
utils/: utils.py
