[project]
name = "fastapi-blog-tutorial"
version = "2.1.0"
description = "FastAPI Blog Management System with Service Layer Architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "sqlalchemy>=2.0.0",
    "python-dotenv",
    "mysql-connector-python>=9.4.0",
    "python-multipart>=0.0.20",
]
